@@ -17,18 +17,15 @@ class BytesTest(unittest.TestCase):
         (c_wchar * 3)("a", "b", "c")
 
     def test_c_char_p(self):
-        c_char_p("foo bar")
         c_char_p(b"foo bar")
 
     def test_c_wchar_p(self):
         c_wchar_p("foo bar")
-        c_wchar_p(b"foo bar")
 
     def test_struct(self):
         class X(Structure):
             _fields_ = [("a", c_char * 3)]
 
-        X("abc")
         x = X(b"abc")
         self.assertEqual(x.a, b"abc")
         self.assertEqual(type(x.a), bytes)
@@ -37,7 +34,6 @@ class BytesTest(unittest.TestCase):
         class X(Structure):
             _fields_ = [("a", c_wchar * 3)]
 
-        X(b"abc")
         x = X("abc")
         self.assertEqual(x.a, "abc")
         self.assertEqual(type(x.a), str)
